<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.tngtech.java</groupId>
    <artifactId>property-loader</artifactId>
    <version>1.3.2-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Property-Loader</name>
    <description>The property loader is a java library for managing property configurations.</description>
    <url>https://github.com/TNG/property-loader</url>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>git@github.com:TNG/property-loader.git</url>
        <connection>scm:git:git@github.com:TNG/property-loader.git</connection>
        <developerConnection>scm:git:git@github.com:TNG/property-loader.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <developers>
        <developer>
            <name>Matthias Bollwein</name>
            <email>matthias.bollwein@tngtech.com</email>
            <organization>TNG Technology Consulting</organization>
        </developer>
        <developer>
            <name>Gerhard Müller</name>
            <email>gerhard.mueller@tngtech.com</email>
            <organization>TNG Technology Consulting</organization>
        </developer>
        <developer>
            <name>Michael Echerer</name>
            <email>michael.echerer@tngtech.com</email>
            <organization>TNG Technology Consulting</organization>
        </developer>
        <developer>
            <name>Markus Eberle</name>
            <email>markus.eberle@tngtech.com</email>
            <organization>TNG Technology Consulting</organization>
        </developer>
        <developer>
            <name>Moritz Prinz</name>
            <email>moritz.prinz@tngtech.com</email>
            <organization>TNG Technology Consulting</organization>
        </developer>
        <developer>
            <name>Thomas Endres</name>
            <email>thomas.endres@tngtech.com</email>
            <organization>TNG Technology Consulting</organization>
        </developer>
    </developers>
    <organization>
        <name>TNG Technology Consulting</name>
        <url>http://www.tngtech.com/</url>
    </organization>
    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.1</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.1</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.3.0</version>
                <dependencies>
                    <dependency>
                        <!-- this fixes https://github.com/trautonen/coveralls-maven-plugin/issues/112 -->
                        <groupId>javax.xml.bind</groupId>
                        <artifactId>jaxb-api</artifactId>
                        <version>2.2.3</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>signing</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.19.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.10.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <properties>
        <slf4j.version>1.7.25</slf4j.version>
    </properties>
</project>
